--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ]
   },
   "require": {
-    "php": ">=5.4",
-    "solarium/solarium": "1.0.0"
+    "php": "5.4",
+    "solarium/solarium": "1.0.0",
+    "shuchkin/simplexlsxgen" : "1.0.0"
   }
 }
